In the last revision, I introduced a bug that caused $CXXFLAGS to be blown away prior to makefile generation.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14429 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/configure.in
+++ b/juggler/modules/vapor/configure.in
@@ -625,7 +625,7 @@ fi
 
 # Ensure that a compiled version of the Boost.Filesystem library is available.
 boost_fs_name="boost_filesystem-$toolset$threading"
-vprsave_CFLAGS="$CFLAGS"
+vprsave_CXXFLAGS="$CXXFLAGS"
 vprsave_CPPFLAGS="$CPPFLAGS"
 vprsave_LIBS="$LIBS"
 vprsave_LDFLAGS="$LDFLAGS"
