--- a/juggler/modules/vapor/configure.in
+++ b/juggler/modules/vapor/configure.in
@@ -1022,6 +1022,7 @@ AC_CONFIG_FILES([
    vpr/IO/Stats/Makefile
    vpr/Sync/Makefile
    vpr/Thread/Makefile
+   vpr/Perf/Makefile
    vpr/Util/Makefile
    vpr/Util/md5/Makefile
    vpr/Util/uuid/Makefile
