--- a/juggler/modules/vapor/mtree/VPR.include.dist.in
+++ b/juggler/modules/vapor/mtree/VPR.include.dist.in
@@ -56,6 +56,8 @@
                 Stats
                 ..
             ..
+            Perf
+            ..
             Sync
             ..
             Thread
