--- a/juggler/modules/gadgeteer/drivers/Intersense/IS900/Makefile.in
+++ b/juggler/modules/gadgeteer/drivers/Intersense/IS900/Makefile.in
@@ -44,7 +44,7 @@ include @topdir@/make.defs.mk
 
 DRIVER_NAME=	IS900
 
-srcdir=		@srcdir@/../../../gadget/Devices/Intersense/IS900
+srcdir=		@srcdir@
 top_srcdir=	@top_srcdir@
 INSTALL=	@INSTALL@
 INSTALL_FILES=
