Relocate the Intersense API driver code to the new Gadgeteer driver directory tree.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14463 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/drivers/Intersense/IntersenseAPI/Makefile.in
+++ b/juggler/modules/gadgeteer/drivers/Intersense/IntersenseAPI/Makefile.in
@@ -44,7 +44,7 @@ include @topdir@/make.defs.mk
 
 DRIVER_NAME=	IntersenseAPI
 
-srcdir=		@srcdir@/../../../gadget/Devices/Intersense/IntersenseAPI
+srcdir=		@srcdir@
 top_srcdir=	@top_srcdir@
 INSTALL=	@INSTALL@
 INSTALL_FILES=	
