--- a/PyJuggler/pyjutil/Makefile.in
+++ b/PyJuggler/pyjutil/Makefile.in
@@ -151,9 +151,12 @@ $(PYJUTIL_ARC): $(OBJS)
 #	$(CXX) -shared -o $@ $< $(BOOST_PYTHON_LDFLAGS)			\
 #          $(PYTHON_LDFLAGS) $(LIBS) $(EXTRA_LIBS)
 
+cleandepend:
+	rm -f $(DEPEND_FILES)
+
 clean:
-	rm -rf $(OBJDIR_DBG)
-	rm -rf $(OBJDIR_OPT)
+	rm -rf $(OBJDIR_DBG) $(OBJDIR_OPT)
+	rm -f $(DEPEND_FILES)
 
 clobber:
 	$(MAKE) clean
@@ -161,10 +164,10 @@ clobber:
 
 # -----------------------------------------------------------------------------
 # Dependency generation.
-# XXX: This doesn't work quite right yet ...
 # -----------------------------------------------------------------------------
-BASIC_OBJECTS=	$(OBJS)
-CXX_COMPILE=	$(CXX) $(CXXFLAGS)
+BASIC_OBJECTS=	$(SRCS:.cpp=.$(OBJEXT))
+MKDEP_C=	$(CC) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS) -M
+MKDEP_CXX=	$(CXX) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CXXFLAGS) -M
 
 include $(top_srcdir)/Doozer++/mk/dpp.dep.mk
-#-include $(DEPEND_FILES)
+-include $(DEPEND_FILES)
