Updated the build system to handle dependency generation better.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14476 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/PyJuggler/Makefile.in
+++ b/PyJuggler/Makefile.in
@@ -55,6 +55,7 @@ recursive:
 
 all debug optim:
 	$(MAKE) RECTARGET="$@" recursive
+	$(MAKE) prefix="$(topdir)" RECTARGET="install" recursive
 
 # XXX: The chmod thing at the end is pretty lame.
 install:
@@ -63,6 +64,9 @@ install:
 	$(PERL) $(scriptdir)/install-dir.pl -o $(projdatadir)/examples	\
           -i $(top_srcdir)/examples -v "$(topdir)/VARS.pl"
 	-chmod $(EXEC_PERMS) $(projdatadir)/examples/python/simpleGL/simpleGL.py
+
+cleandepend:
+	$(MAKE) DO_CLEANDEPEND=1 RECTARGET="$@" recursive
 
 clean clobber:
 	$(MAKE) RECTARGET="$@" recursive
