--- a/PyJuggler/src/gadget/Makefile.in
+++ b/PyJuggler/src/gadget/Makefile.in
@@ -25,28 +25,34 @@
 #
 # *************** <auto-copyright.pl END do not edit this line> ***************
 
-include @topdir@/src/common.mk
+srcdir=		@srcdir@
 
-DIRS=	vpr jccl gadget vrj
+GADGET_LIBS=		$(shell gadgeteer-config --libs)
+GADGET_EXTRA_LIBS=	$(shell gadgeteer-config --extra-libs)
 
-ifeq (@HAVE_OSG@, Y)
-DIRS+=	osgapp
-endif
+EXTRA_CXXFLAGS=		$(shell gadgeteer-config --cxxflags)
+EXTRA_LDFLAGS=		$(PYJUTIL_LIB) $(GADGET_LIBS) $(GADGET_EXTRA_LIBS)
+MOD_NAME=		gadget
 
-all clean cleandepend clobber debug optim:
-	@for d in $(DIRS) ; do			\
-            echo "===> $$d" ;			\
-            $(MAKE) -C $$d $@ || exit 1;	\
-            echo "<=== $$d" ;			\
-          done
+SRCS= \
+	_Analog.cpp				\
+	_AnalogData.cpp				\
+	_AnalogInterface.cpp			\
+	_AnalogProxy.cpp			\
+	_BaseDeviceInterface.cpp		\
+	_Digital.cpp				\
+	_DigitalData.cpp			\
+	_DigitalInterface.cpp			\
+	_DigitalProxy.cpp			\
+	_Event.cpp				\
+	_KeyEvent.cpp				\
+	_MouseEvent.cpp				\
+	_Position.cpp				\
+	_PositionData.cpp			\
+	_PositionInterface.cpp			\
+	_PositionProxy.cpp			\
+	_gadget_Type_EventWindow_Event_h.cpp	\
+	_gadget_Type_EventWindow_Keys_h.cpp	\
+	gadget.cpp
 
-install:
-	$(MKINSTALLDIRS) $(PYTHON_PACKAGES)
-	@for d in $(DIRS) ; do			\
-            echo "===> $$d" ;			\
-            $(MAKE) -C $$d $@ || exit 1;	\
-            echo "<=== $$d" ;			\
-          done
-	cp $(top_srcdir)/dist/__init__.py $(PYTHON_PACKAGES)
-	cp $(top_srcdir)/dist/vrj.py $(PYTHON_PACKAGES)
-
+include ../common-targets.mk
