--- a/PyJuggler/src/jccl/Makefile.in
+++ b/PyJuggler/src/jccl/Makefile.in
@@ -25,28 +25,18 @@
 #
 # *************** <auto-copyright.pl END do not edit this line> ***************
 
-include @topdir@/src/common.mk
+srcdir=		@srcdir@
 
-DIRS=	vpr jccl gadget vrj
+JCCL_LIBS=		$(shell jccl-config --libs)
+JCCL_EXTRA_LIBS=	$(shell jccl-config --extra-libs)
 
-ifeq (@HAVE_OSG@, Y)
-DIRS+=	osgapp
-endif
+EXTRA_CXXFLAGS=		$(shell jccl-config --cxxflags)
+EXTRA_LDFLAGS=		$(PYJUTIL_LIB) $(JCCL_LIBS) $(JCCL_EXTRA_LIBS)
+MOD_NAME=		jccl
 
-all clean cleandepend clobber debug optim:
-	@for d in $(DIRS) ; do			\
-            echo "===> $$d" ;			\
-            $(MAKE) -C $$d $@ || exit 1;	\
-            echo "<=== $$d" ;			\
-          done
+SRCS= \
+	_ConfigElement.cpp		\
+	_ConfigElementHandler.cpp	\
+	jccl.cpp
 
-install:
-	$(MKINSTALLDIRS) $(PYTHON_PACKAGES)
-	@for d in $(DIRS) ; do			\
-            echo "===> $$d" ;			\
-            $(MAKE) -C $$d $@ || exit 1;	\
-            echo "<=== $$d" ;			\
-          done
-	cp $(top_srcdir)/dist/__init__.py $(PYTHON_PACKAGES)
-	cp $(top_srcdir)/dist/vrj.py $(PYTHON_PACKAGES)
-
+include ../common-targets.mk
