omniORBX/omniORB.h cannot be included by itself.  This has caused configure to print a big warning regarding the availability versus the usability of the header.  To silence this warning, we now check for the header file that is actually included by the Tweek CORBA wrapper code.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14479 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/tweek/configure.in
+++ b/juggler/modules/tweek/configure.in
@@ -493,10 +493,14 @@ setup_omniORB_cxx ( )
       CPPFLAGS="$CPPFLAGS -I$cxx_orb_root/include"
    fi
 
-   AC_CHECK_HEADER(omniORB$OMNI_VER/omniORB.h, ,
+   DPP_LANG_SAVE
+   DPP_LANG_CPLUSPLUS
+
+   AC_CHECK_HEADER(omniORB$OMNI_VER/CORBA.h, ,
       [AC_MSG_WARN([*** $cxx_orb_name required for Tweek C++ API ***])
-       BUILD_CXX='N'
-      ])
+       BUILD_CXX='N'])
+
+   DPP_LANG_RESTORE
 
    CPPFLAGS="$tweek_save_CPPFLAGS"
 
