--- a/juggler/vc7/Gadgeteer/StartBarrierPlugin/StartBarrierPlugin.vcproj
+++ b/juggler/vc7/Gadgeteer/StartBarrierPlugin/StartBarrierPlugin.vcproj
@@ -112,14 +112,14 @@
 			Name="Source Files"
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm">
 			<File
-				RelativePath="..\..\..\modules\gadgeteer\cluster\Plugins\StartBarrierPlugin\StartBarrierPlugin.cpp">
+				RelativePath="..\..\..\modules\gadgeteer\plugins\StartBarrierPlugin\StartBarrierPlugin.cpp">
 			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc">
 			<File
-				RelativePath="..\..\..\modules\gadgeteer\cluster\Plugins\StartBarrierPlugin\StartBarrierPlugin.h">
+				RelativePath="..\..\..\modules\gadgeteer\plugins\StartBarrierPlugin\StartBarrierPlugin.h">
 			</File>
 		</Filter>
 		<Filter
