Disable an unhelpful warning.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14490 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/vc7/JCCL/JCCL.vcproj
+++ b/juggler/vc7/JCCL/JCCL.vcproj
@@ -29,7 +29,7 @@
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="TRUE"
 				DebugInformationFormat="4"
-				DisableSpecificWarnings="4251"/>
+				DisableSpecificWarnings="4251;4290"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
@@ -80,7 +80,7 @@
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="TRUE"
 				DebugInformationFormat="3"
-				DisableSpecificWarnings="4251"/>
+				DisableSpecificWarnings="4251;4290"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
@@ -130,7 +130,7 @@
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="TRUE"
 				DebugInformationFormat="4"
-				DisableSpecificWarnings="4251"/>
+				DisableSpecificWarnings="4251;4290"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
@@ -170,7 +170,7 @@
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="TRUE"
 				DebugInformationFormat="3"
-				DisableSpecificWarnings="4251"/>
+				DisableSpecificWarnings="4251;4290"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
