--- a/vc7/VRJuggler/Performer_Draw_Manager/Performer_Draw_Manager.vcproj
+++ b/vc7/VRJuggler/Performer_Draw_Manager/Performer_Draw_Manager.vcproj
@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;C:\Program Files\Silicon Graphics\OpenGL Performer\Include&quot;;&quot;C:\Program Files\Silicon Graphics\OpenGL Performer\Include\Performer&quot;;..\..\..\external\GMTL;..\..\..\modules\vapor;..\..\..\modules\jackal\common;..\..\..\modules\jackal\config;..\..\..\modules\jackal\rtrc;..\..\..\modules\gadgeteer;..\..\..\modules\vrjuggler;..\..\..\modules\sonix;..;..\..\VPR;..\..\JCCL;..\..\Gadgeteer;..\..\Sonix"
+				AdditionalIncludeDirectories=".;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(PF_ROOT)\Include&quot;;&quot;$(PF_ROOT)\Include\Performer&quot;;..\..\..\external\GMTL;..\..\..\modules\vapor;..\..\..\modules\jackal\common;..\..\..\modules\jackal\config;..\..\..\modules\jackal\rtrc;..\..\..\modules\gadgeteer;..\..\..\modules\vrjuggler;..\..\..\modules\sonix;..;..\..\VPR;..\..\JCCL;..\..\Gadgeteer;..\..\Sonix"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_VRJ_BUILD_"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
@@ -37,7 +37,7 @@
 				OutputFile="$(OutDir)/vrj_pf_d.dll"
 				Version="1.1.148"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="..\DebugDLL;..\..\VPR\DebugDLL;..\..\JCCL\DebugDLL;..\..\Gadgeteer\DebugDLL;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;C:\Program Files\Silicon Graphics\OpenGL Performer\Lib\Debug&quot;"
+				AdditionalLibraryDirectories="..\DebugDLL;..\..\VPR\DebugDLL;..\..\JCCL\DebugDLL;..\..\Gadgeteer\DebugDLL;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(PF_ROOT)\Lib\Debug&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/vrj_d.pdb"
 				SubSystem="2"
@@ -69,7 +69,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				OmitFramePointers="TRUE"
-				AdditionalIncludeDirectories=".;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;C:\Program Files\Silicon Graphics\OpenGL Performer\Include&quot;;&quot;C:\Program Files\Silicon Graphics\OpenGL Performer\Include\Performer&quot;;..\..\..\external\GMTL;..\..\..\modules\vapor;..\..\..\modules\jackal\common;..\..\..\modules\jackal\config;..\..\..\modules\jackal\rtrc;..\..\..\modules\gadgeteer;..\..\..\modules\vrjuggler;..\..\..\modules\sonix;..;..\..\VPR;..\..\JCCL;..\..\Gadgeteer;..\..\Sonix"
+				AdditionalIncludeDirectories=".;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(PF_ROOT)\Include&quot;;&quot;$(PF_ROOT)\Include\Performer&quot;;..\..\..\external\GMTL;..\..\..\modules\vapor;..\..\..\modules\jackal\common;..\..\..\modules\jackal\config;..\..\..\modules\jackal\rtrc;..\..\..\modules\gadgeteer;..\..\..\modules\vrjuggler;..\..\..\modules\sonix;..;..\..\VPR;..\..\JCCL;..\..\Gadgeteer;..\..\Sonix"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_VRJ_BUILD_;_OPT"
 				StringPooling="TRUE"
 				RuntimeLibrary="0"
@@ -87,7 +87,7 @@
 				OutputFile="$(OutDir)/vrj_pf.dll"
 				Version="1.1.148"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="..\ReleaseDLL;..\..\VPR\ReleaseDLL;..\..\JCCL\ReleaseDLL;..\..\Gadgeteer\ReleaseDLL;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;C:\Program Files\Silicon Graphics\OpenGL Performer\Lib&quot;"
+				AdditionalLibraryDirectories="..\ReleaseDLL;..\..\VPR\ReleaseDLL;..\..\JCCL\ReleaseDLL;..\..\Gadgeteer\ReleaseDLL;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(PF_ROOT)\Lib&quot;"
 				GenerateDebugInformation="FALSE"
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -118,7 +118,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;C:\Program Files\Silicon Graphics\OpenGL Performer\Include&quot;;&quot;C:\Program Files\Silicon Graphics\OpenGL Performer\Include\Performer&quot;;..\..\..\external\GMTL;..\..\..\modules\vapor;..\..\..\modules\jackal\common;..\..\..\modules\jackal\config;..\..\..\modules\jackal\rtrc;..\..\..\modules\gadgeteer;..\..\..\modules\vrjuggler;..\..\..\modules\sonix;..;..\..\VPR;..\..\JCCL;..\..\Gadgeteer;..\..\Sonix"
+				AdditionalIncludeDirectories=".;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(PF_ROOT)\Include&quot;;&quot;$(PF_ROOT)\Include\Performer&quot;;..\..\..\external\GMTL;..\..\..\modules\vapor;..\..\..\modules\jackal\common;..\..\..\modules\jackal\config;..\..\..\modules\jackal\rtrc;..\..\..\modules\gadgeteer;..\..\..\modules\vrjuggler;..\..\..\modules\sonix;..;..\..\VPR;..\..\JCCL;..\..\Gadgeteer;..\..\Sonix"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_VRJ_BUILD_"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
@@ -157,7 +157,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				OmitFramePointers="TRUE"
-				AdditionalIncludeDirectories=".;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;C:\Program Files\Silicon Graphics\OpenGL Performer\Include&quot;;&quot;C:\Program Files\Silicon Graphics\OpenGL Performer\Include\Performer&quot;;..\..\..\external\GMTL;..\..\..\modules\vapor;..\..\..\modules\jackal\common;..\..\..\modules\jackal\config;..\..\..\modules\jackal\rtrc;..\..\..\modules\gadgeteer;..\..\..\modules\vrjuggler;..\..\..\modules\sonix;..;..\..\VPR;..\..\JCCL;..\..\Gadgeteer;..\..\Sonix"
+				AdditionalIncludeDirectories=".;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(PF_ROOT)\Include&quot;;&quot;$(PF_ROOT)\Include\Performer&quot;;..\..\..\external\GMTL;..\..\..\modules\vapor;..\..\..\modules\jackal\common;..\..\..\modules\jackal\config;..\..\..\modules\jackal\rtrc;..\..\..\modules\gadgeteer;..\..\..\modules\vrjuggler;..\..\..\modules\sonix;..;..\..\VPR;..\..\JCCL;..\..\Gadgeteer;..\..\Sonix"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_VRJ_BUILD_;_OPT"
 				StringPooling="TRUE"
 				RuntimeLibrary="0"
