Forgot to commit this for the Intesense custom editor.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14564 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/configure.in
+++ b/juggler/modules/vrjuggler/configure.in
@@ -672,6 +672,9 @@ AC_CONFIG_FILES([
    vrjconfig/Makefile
    vrjconfig/Makefile.inc
    vrjconfig/customeditors/Makefile
+   vrjconfig/customeditors/intersense/build.xml
+   vrjconfig/customeditors/intersense/Makefile
+   vrjconfig/customeditors/intersense/Makefile.inc
    vrjconfig/customeditors/proxyeditor/build.xml
    vrjconfig/customeditors/proxyeditor/Makefile
    vrjconfig/customeditors/proxyeditor/Makefile.inc
