Fixing the Intersense custom editor build.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14565 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/vrjconfig/customeditors/Makefile.in
+++ b/juggler/modules/vrjuggler/vrjconfig/customeditors/Makefile.in
@@ -53,6 +53,7 @@ ifeq ($(BUILD_JAVA), Y)
    ifeq ($(BUILD_PROXY_EDITOR), Y)
       SUBDIR+=	proxyeditor
    endif
+   SUBDIR+= intersense
 endif
 
 # Subdirectories to compile.
