New feature:	VR Juggler applications can be built as plug-ins using the 		command 'make plugin'.
Note that building an application as a plug-in is not quite as simple as
what is stated above.  The main() function (if one exists) needs to be
#ifdef'd out when building a plug-in, and an entry point function must be
defined instead.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14584 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/VARS.pl.in
+++ b/juggler/modules/vrjuggler/VARS.pl.in
@@ -45,6 +45,7 @@
 # Compiler information.
 $VARS{'APP_CC'}           = '@APP_CC@';
 $VARS{'APP_CXX'}          = '@APP_CXX@';
+$VARS{'APP_CXX_PLUGIN'}   = '@APP_CXX_PLUGIN@';
 $VARS{'APP_CFLAGS'}       = '@APP_CFLAGS@';
 $VARS{'APP_CXXFLAGS'}     = '@APP_CXXFLAGS@';
 $VARS{'APP_DEBUG_CFLAGS'} = '@APP_DEBUG_CFLAGS@';
