Bug fixed:	Individual parameter strings passed to this script that 		contained spaces were not passed on to the java command 		as whole parameter strings.  Instead, they were broken 		up into individual parameters that the JVM then 		misinterpreted.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14591 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/tweek/java/tweek-base.sh.in
+++ b/juggler/modules/tweek/java/tweek-base.sh.in
@@ -78,6 +78,6 @@ else
       ORBSingletonClass_PROP="-Dorg.omg.CORBA.ORBSingletonClass=$ORB_SINGLETON_CLASS_PROP"
    fi
 
-   $JDK_HOME/bin/java $ORBClass_PROP $ORBSingletonClass_PROP -Djava.security.policy="$TWEEK_BASE_DIR/bin/java.security.policy.txt" -DTWEEK_BASE_DIR="${TWEEK_BASE_DIR}" $EXTRA_JDK_ARGS org.vrjuggler.tweek.Tweek $*
+   $JDK_HOME/bin/java $ORBClass_PROP $ORBSingletonClass_PROP -Djava.security.policy="$TWEEK_BASE_DIR/bin/java.security.policy.txt" -DTWEEK_BASE_DIR="${TWEEK_BASE_DIR}" $EXTRA_JDK_ARGS org.vrjuggler.tweek.Tweek "$@"
    status=0
 fi
