Disable static linking of libjccl for now.  There is some sort of problem with getting multiple jccl::ConfigManager instances when static linking is in effect.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14599 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/jackal/test/TestSuite/Makefile.in
+++ b/juggler/modules/jackal/test/TestSuite/Makefile.in
@@ -82,8 +82,7 @@ SUBDIR=		TestCases
 # -----------------------------------------------------------------------------
 # Linking stuff.
 # -----------------------------------------------------------------------------
-BASIC_LIBS=	@APP_BASIC_LIBS_BEGIN@ @APP_BASIC_LIBS@		\
-		@APP_BASIC_EXT_LIBS@ @APP_BASIC_LIBS_END@	\
+BASIC_LIBS=	@APP_BASIC_LIBS@ @APP_BASIC_EXT_LIBS@		\
 		$(NULL)
 EXTRA_LIBS=	@APP_EXTRA_LIBS_BEGIN@ @APP_EXTRA_LIBS@		\
 		@APP_EXTRA_LIBS_END@				\
