--- a/modules/jackal/test/TestSuite/TestCases/Makefile.in
+++ b/modules/jackal/test/TestSuite/TestCases/Makefile.in
@@ -44,6 +44,7 @@ SRCS= \
 	ConfigurationTest.cpp		\
 	ConfigDefinitionTest.cpp	\
 	ConfigElementTest.cpp		\
+	ConfigManagerTest.cpp		\
 	EnumerationsTest.cpp		\
 	IncludesTest.cpp
 
