Added tests for jccl::ConfigManager to help ensure that run-time reconfiguration works at the lowest levels.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14600 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/jackal/test/TestSuite/TestCases/Makefile.in
+++ b/juggler/modules/jackal/test/TestSuite/TestCases/Makefile.in
@@ -44,6 +44,7 @@ SRCS= \
 	ConfigurationTest.cpp		\
 	ConfigDefinitionTest.cpp	\
 	ConfigElementTest.cpp		\
+	ConfigManagerTest.cpp		\
 	EnumerationsTest.cpp		\
 	IncludesTest.cpp
 
