When building optimized code, define NDEBUG.  This seems to be more standard that _OPT, but we'll keep defining _OPT since that has been our convention for several years.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14603 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/plugins/gadget.plugin.mk.in
+++ b/juggler/modules/gadgeteer/plugins/gadget.plugin.mk.in
@@ -128,7 +128,7 @@ else
    BUILD_TYPE_EXT=	
    DEBUG_APP=		FALSE
    OPTIM_APP=		TRUE
-   EXTRA_DEFS+=		-D_OPT
+   EXTRA_DEFS+=		-D_OPT -DNDEBUG
 endif
 
 DSO_PLUGIN_DEPS=	$(shell gadgeteer-config --libs)		\
